fix(card): stretch visible card to row height

--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -1,11 +1,16 @@
 @use '../../mixins/box-sizing' as *;
 
+:host {
+  display: block;
+}
+
 .card {
   @include tds-box-sizing;
 
   box-shadow: var(--tds-card-box);
   background-color: var(--tds-card-background);
   display: block;
+  width: 100%;
   border-radius: 4px;
   overflow: hidden;
 
@@ -105,6 +110,10 @@
     padding: 16px;
     color: var(--tds-card-icon-color);
   }
+}
+
+:host([stretch]) .card {
+  height: 100%;
 }
 
 button {
